removed the var.yaml file'

--- a/inventory.ini
+++ b/inventory.ini
@@ -1,3 +1,8 @@
 [new_ec2_instance]
-54.252.243.118 ansible_user=ec2-user 
+54.252.243.118 ansible_user=ec2-user
 
+[all:vars]
+docker_image_name=flask-todo:latest
+container_name=flask_container
+host_port=5000
+flask_app_port=5000
